--- a/examples/basic-jsx/index.html
+++ b/examples/basic-jsx/index.html
@@ -13,11 +13,16 @@
     var HelloWorld = React.createClass({
         render: ()=> {
             return (
-                    <h1 className = 'world'>hello world</h1>
+                    <h1 className='world'>hello world</h1>
             );
         }
     });
-    ReactDOM.render(<HelloWorld/>,document.getElementById('container'));
+    ReactDOM.render(
+            <div>
+                <HelloWorld/>
+                <HelloWorld/>
+                <HelloWorld/>
+            </div>, document.getElementById('container'));
 </script>
 </body>
 </html>
