--- a/examples/basic-jsx/index.html
+++ b/examples/basic-jsx/index.html
@@ -11,21 +11,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 <script type="text/babel">
     var HelloWorld = React.createClass({
+        dothing:function () {
+            alert('I\'m a event!');
+        },
         render: function () {
             return (<div>
                         <h1>hello {this.props.name}</h1>
                         <p>{this.props.children}</p>
+                        <a href="#" onClick={this.dothing}>Click me!</a>
                     </div>
             );
 
         }
     });
-    ReactDOM.render(
-            <div>
-                <HelloWorld name="transfer">not only use props get property</HelloWorld>
-                <HelloWorld name="property">but also children Written in module</HelloWorld>
-                <HelloWorld name="value">use props get children</HelloWorld>
-            </div>, document.getElementById('container'));
+    ReactDOM.render(<HelloWorld name="use props get property">use props get children</HelloWorld>, document.getElementById('container'));
 </script>
 </body>
 </html>
