--- a/examples/basic-jsx/index.html
+++ b/examples/basic-jsx/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Basic Example with JSX</title>
+    <style type="text/css" rel="stylesheet">
+        ul, li {
+            list-style: none;
+        }
+    </style>
 </head>
 <body>
 <div id="container"></div>
@@ -11,15 +16,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 <script type="text/babel">
     var TodoItem = React.createClass({
-        handleChange: function () {
-            let isDone = !this.props.item.isDone;
-            this.state.items[this.props.index].isDone=isDone;
+        handleDelete(){
+            this.props.handleDelete(this.props.index);
+        },
+        handleChange(){
+            this.props.handleChange(this.props.index, this.props.item.isDone);
         },
         render: function () {
+            let lineStyle = this.props.item.isDone ? {textDecoration: 'line-through'} : {textDecoration: 'none'};
             return (
-                    <li><input type="checkbox" checked={this.props.item.isDone} onChange={this.handleChange.bind(this)}/>
-                        <span>{this.props.item.text}</span>
-                        <button>X</button>
+                    <li><input type="checkbox" checked={this.props.item.isDone} onChange={this.handleChange}/>
+                        <span style={lineStyle}>{this.props.item.text}</span>
+                        <button onClick={this.handleDelete}>X</button>
                     </li>
             );
         }
@@ -27,10 +35,17 @@
 
 
     var TodoList = React.createClass({
+        handleChange(){
+            this.props.handleChange(index, Done);
+        },
+        handleDelete(){
+            this.props.handleDelete(index);
+        },
         render: function () {
             return (
                     <ul>{this.props.items.map((createItem, index) => {
-                        return <TodoItem item={createItem} index={index}/>
+                        return <TodoItem handleDelete={this.props.handleDelete} handleChange={this.props.handleChange}
+                                         onChange={this.handleChange} item={createItem} index={index}/>
 
                     })}
                         <li>{this.props.items.length} items left
@@ -42,9 +57,19 @@
             );
         }
     });
+
     var TodoApp = React.createClass({
         getInitialState: function () {
             return {items: [], allChecked: false};
+        },
+        handleChange: function (index, isDone) {
+            let done = !isDone;
+            this.state.items[index].isDone = done;
+            this.setState({items: this.state.items});
+        },
+        handleDelete: function (index) {
+            this.state.items.splice(index);
+            this.setState({items: this.state.items});
         },
         handleSubmit: function (e) {
             if (e.keyCode === 13) {
@@ -65,8 +90,9 @@
             return (
                     <div>
                         <h1>todos</h1>
-                        <input onKeyUp={this.handleSubmit.bind(this)} type="text" placeholder="what's your task ?"/>
-                        <TodoList items={this.state.items}/>
+                        <input onKeyUp={this.handleSubmit} type="text" placeholder="what's your task ?"/>
+                        <TodoList items={this.state.items} handleDelete={this.handleDelete}
+                                  handleChange={this.handleChange}/>
                     </div>
             );
         }
